# spliceCheck

./: .gitignore  DESIGN.md  README.md  STDOUT_summary.html  STDOUT_warnings.txt  app.yaml  application.py  config.py  helpers.py  list_thread.py  main.py  mssngsamples.txt  requirements.txt  spliceCheck.py  spliceCheck_new.py  spliceCheck_new2.py  spliceCheck_new_es.py
lib/Flask-1.1.2.dist-info/: RECORD
static/: javascript.js  style.css
templates/: about.html  apology.html  index.html  layout.html  listpage.html  output.html  outputFile.html
tools/: twoBitToFa
tools/ensembl-vep/: A
tools/ensembl-vep/biodbhts/: Build  MYMETA.json  MYMETA.yml
tools/ensembl-vep/htslib/: Makefile  bgzf.pico  bgzip  faidx.pico  hfile.pico  hfile_net.pico  hts.pico  htsfile  kfunc.pico  knetfile.pico  kstring.pico  libhts.so.1  md5.pico  regidx.pico  sam.pico  synced_bcf_reader.pico  tabix  tbx.pico  vcf.pico  vcf_sweep.pico  vcfutils.pico  version.h
tools/maxentscan/: score3_mod.pl  score5_mod.pl  test.fa
tools/polyphen-2.2.2/: AUTHORS  INSTALL  LICENSE  PLATFORMS  README  VERSION  configure
tools/polyphen-2.2.2/config/: align.cnf.dist  databases.cnf.dist  debug.cnf.dist  options.cnf.dist  paths.cnf.dist  programs.cnf.dist  programs_options.cnf.dist
tools/polyphen-2.2.2/matr/: Blosum62.txt  RBLOSUM64.txt
tools/polyphen-2.2.2/models/: HumDiv.UniRef100.NBd.f11.model  HumVar.UniRef100.NBd.f11.model
tools/polyphen-2.2.2/perl/: PPH.pm  SNP.pm
tools/sift6.2.1/: INSTALL  VERSION_UPDATE
tools/sift6.2.1/blimps/docs/: Makefile.am  Makefile.in
tools/sift6.2.1/src/: Clumping.c  (+24 more)
(+77 files in other folders)
