data1dir = $(datadir)/data/@PACKAGE@/blastmat

dist_data1_DATA =\
blosum62.bla.new \
coduse.csh \
config.doc \
default.amino.frq \
default.codon.frq \
default.codon.use \
default.consensus.iij \
default.diri \
default.embed.iij \
default.embed.mat \
default.embed.qij \
default.iij \
default.mat \
default.qij \
default.rank \
default.sij \
identity.frq \
skiplist.doc \
sl-functions.doc 
